@@ -1,5 +1,10 @@
 2010-02-05  Donal K. Fellows  <dkf@users.sf.net>
 
+	* generic/tclOOBasic.c (TclOO_Object_Destroy): Rewrote to be NRE-aware
+	when calling destructors. Note that there is no guarantee that
+	destructors will always be called in an NRE context; that's a feature
+	of the 'destroy' method only.
+
 	* generic/tclEncoding.c: Add 'const' to many function-internal vars
 	that are never pointing to things that are written to.
 
